Revision history for App-Doh

          - ComponentLoading returns plain text 500 if Request->new fails
          - Added post_install and uninstall commands to CLI
          - Scripts sources a local env script
          - Toolchain now builds a Debian file

0.9.1     2015-01-04 16:01:57
          - Ajax requests now use JSON not XML
          - Added model_name to request object
          - API improvement ::Functions::load_components
          - Fixed search methods external call to ack
          - Made private functions and methods lexical subs

0.8.1     2014-10-31 01:08:36
          - Updated throw call syntax
          - Fixed decoding of body parameters
          - Component and input encoding defaults to config
          - Added maximum generation run time
          - URIs now properly enscaped
          - Improved Request API will instantiate from a hash

0.7.1     2014-09-19 00:23:42
          - Improved Request API raw params now private
          - Session secret now has more source options
          - Component loading respects + at the start of class names
          - Static generation no longer creates defunct process
          - Added editor CSS to repo for install off Github
          - Enabled ConditionalGET in Plack stack
          - Serve JS from content delivery network
          - Added t::boilerplate to tests

0.6.1     2014-08-07 15:39:42
          - Added Data::Validation to user form
          - Implemented status message queue
          - Get /favicon.ico now returns 404
          - Added make_skin method to CLI
          - Renamed less files to create skin structure
          - Improved layout of profile-user form
          - Put page status on a div since defaultStatus not supported
          - Removed ForwardEvents class from JS. Doesn't work
          - Created editor.tt for the markdown editor
          - Style fixes to post navigation buttons

0.5.1     2014-07-29 18:35:58
          - Made Root controller look like a routing table