@@ -178,9 +178,9 @@ sub iterator ($) {
 sub load_components ($$;$) {
    my ($search_path, $config, $args) = @_; $args //= {};
 
-   $search_path or throw Unspecified, [ 'search path' ];
+   $search_path or throw Unspecified,          [ 'search path' ];
    $config = merge_attributes {}, $config, {}, [ 'appclass', 'monikers' ];
-   $config->{appclass} or throw Unspecified, [ 'application class' ];
+   $config->{appclass} or throw Unspecified,   [ 'application class' ];
 
    if (first_char $search_path eq '+') { $search_path = substr $search_path, 1 }
    else { $search_path = $config->{appclass}."::${search_path}" }
@@ -190,16 +190,16 @@ sub load_components ($$;$) {
       ( max_depth   => $depth,           min_depth => $depth,
         search_path => [ $search_path ], require   => TRUE, );
    my $monikers = $config->{monikers} // {};
-   my $plugins  = {};
+   my $compos   = $args->{components} = {}; # Dependency injection
 
-   for my $plugin ($finder->plugins) {
-      exists $monikers->{ $plugin } and defined $monikers->{ $plugin }
-         and $args->{moniker} = $monikers->{ $plugin };
+   for my $class ($finder->plugins) {
+      exists $monikers->{ $class } and defined $monikers->{ $class }
+         and $args->{moniker} = $monikers->{ $class };
 
-      my $comp  = $plugin->new( $args ); $plugins->{ $comp->moniker } = $comp;
+      my $comp  = $class->new( $args ); $compos->{ $comp->moniker } = $comp;
    }
 
-   return $plugins;
+   return $compos;
 }
 
 sub localise_tree ($$) {
