@@ -9,8 +9,8 @@ use File::DataClass::IO;
 use Moo;
 
 extends q(App::Doh::Model);
-with    q(App::Doh::Role::CommonLinks);
 with    q(App::Doh::Role::PageConfiguration);
+with    q(App::Doh::Role::CommonLinks);
 with    q(App::Doh::Role::Preferences);
 
 # Public attributes
