@@ -6,15 +6,21 @@ use App::Doh::Functions    qw( extract_lang make_id_from make_name_from mtime
                                set_element_focus );
 use Class::Usul::Constants qw( EXCEPTION_CLASS TRUE );
 use Class::Usul::Functions qw( io throw trim untaint_path );
+use Class::Usul::IPC;
 use Class::Usul::Time      qw( time2str );
+use Class::Usul::Types     qw( Object );
 use HTTP::Status           qw( HTTP_EXPECTATION_FAILED HTTP_NOT_FOUND
                                HTTP_PRECONDITION_FAILED
                                HTTP_REQUEST_ENTITY_TOO_LARGE );
 use Unexpected::Functions  qw( Unspecified );
 use Moo::Role;
 
-requires qw( config find_node get_stash invalidate_cache ipc load_page
-             log navigation render_template usul );
+requires qw( config find_node get_stash invalidate_cache
+             load_page log navigation render_template usul );
+
+# Public attributes
+has 'ipc' => is => 'lazy', isa => Object, builder => sub {
+   Class::Usul::IPC->new( builder => $_[ 0 ]->usul ) };
 
 # Private functions
 my $_append_suffix = sub {
